--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "logger"]
-	path = logger
-	url = https://github.com/LandRegistry/python_logging.git
+[submodule "python_logging"]
+	path = python_logging
+	url = ../python_logging
