--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ __pycache__/
 
 .vagrant/
 
+TEST-register-publisher.xml
+
 # C extensions
 *.so
 
@@ -61,4 +63,3 @@ target/
 #intellij
 *.iml
 *.idea
-
