--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
-flask==0.10.1
+amqp==1.4.7
+anyjson==0.3.3
+argh==0.26.1
+cov-core==1.15.0
+coverage==3.7.1
+Flask==0.10.1
+itsdangerous==0.24
+Jinja2==2.8
+kombu==3.0.24
+MarkupSafe==0.23
+mock==1.1.0
+pathtools==0.1.2
+pbr==1.8.1
+py==1.4.30
 pytest==2.6.4
 pytest-cov==1.8.1
-kombu==3.0.24
-stopit==1.1.0
 PyYAML==3.11
+six==1.10.0
+stopit==1.1.0
 watchdog==0.8.3
-mock==1.1.0
+Werkzeug==0.10.4
+wheel==0.24.0
